# open-adk-claw

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.mac.yml  docker-compose.yml  pyproject.toml
services/browser/: Dockerfile  main.py
services/sandbox/: Dockerfile  main.py
src/adk_claw/: __main__.py  agent.py  config.py  context.py  dispatcher.py  heartbeat.py  main.py  queue.py
src/adk_claw/actions/: README.md  agent_tools.py  browser_tools.py  calendar_tools.py  datetime_tools.py  email_tools.py  heartbeat_tools.py  memory_curator_tools.py  memory_tools.py  sandbox_tools.py  skill_tools.py
src/adk_claw/agents/: browser_agent.py  dynamic.py  email_calendar_agent.py  heartbeat_agent.py  memory_curator_agent.py
src/adk_claw/channels/: base.py
src/adk_claw/channels/gmail/: README.md  __init__.py  auth.py  channel.py
src/adk_claw/channels/telegram/: README.md  __init__.py  channel.py
src/adk_claw/guardrails/: email_guardrails.py  execution_guardrails.py
src/adk_claw/memory/: embed.py  embeddings.py  search.py  service.py
src/adk_claw/plugins/: logging_plugin.py
src/adk_claw/skills/: toolset.py
tests/: test_email_guardrails.py  test_embeddings.py  test_execution_guardrails.py  test_hybrid_search.py  test_memory_search.py  test_memory_upsert.py  test_queue.py  test_session_rotation.py  test_skill_tools.py
workspace/: HEARTBEAT.md  RULES.md
